Fix env example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Network
-LOCAL_IP = "127.0.0.1"
-GATEWAY_IP = "127.0.0.1"
-GATEWAY_PORT = "3671"
+LOCAL_IP = ""
+GATEWAY_IP = ""
+GATEWAY_PORT = ""
 
 # AWS
-AWS_ACCESS_KEY_ID = 'AKIARVYVWRWXVYRR3E4F'
-AWS_SECRET_ACCESS_KEY = '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'
-AWS_REGION = 'eu-west-1'
-TABLE_NAME = "knx-smart-building"3
+AWS_ACCESS_KEY_ID = ''
+AWS_SECRET_ACCESS_KEY = ''
+AWS_REGION = ''
+TABLE_NAME = ""
